[workspace]

members = [
    "template",
    "01-tyranny-of-the-rocket-equation",
    "02-1202-program-alarm",
    "03-crossed-wires",
    "04-secure-container",
    "05-sunny-with-a-chance-of-asteroids",
    "06-universal-orbit-map",
    "07-amplification-circuit",
    "08-space-image-format",
    "09-sensor-boost",
    "10-monitoring-station",
    "11-space-police",
]