[package]
name = "04-secure-container"
version = "0.1.0"
authors = ["df5602 <dominik@fankhausers.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-util = { git = "https://github.com/df5602/aoc-util" }
adhoc_derive = "0.1.2"
lazy_static = "1.2.0"
regex = "1.1.0"